<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">博客发布器</string>
    <string name="side_bar">索引条</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">博客发布器</string>
    <string name="blog_login">博客</string>
    <string name="blog_id">ID ：</string>
    <string name="usrname">帐 号 ：</string>
    <string name="password">密 码 ：</string>
    <string name="login">登录</string>
    <string name="diary">日志</string>
    <string name="new_diary">写日志</string>
    <string name="diary_list">联系人列表</string>
    <string name="title">标 题 ：</string>
    <string name="title_hint">在这里输入标题</string>
    <string name="content_hint">正文…</string>
    <string name="edit_content">编辑正文</string>
    <string name="publish">发 布</string>
    <string name="save">存为草稿</string>
    <string name="drafts">草稿箱</string>
    <string name="clear_all">清空列表</string>
    <string name="draft_num">共<xliff:g id="num">%1$s</xliff:g>篇草稿</string>
    <string name="toast_no_title_content">标题和正文不能都为空!</string>
    
    <string name="pull_to_refresh">下拉刷新…</string>
    <string name="release_to_refresh">放开以刷新…</string>
    <string name="loading">正在载入…</string>
    <string name="applications">我的应用</string>
    
    <string name="app_name_1">我的应用1</string>
    <string name="app_name_2">我的应用2</string>
    <string name="app_name_3">我的应用3</string>
    <string name="app_name_4">我的应用4</string>
    <string name="app_name_5">我的应用5</string>
    <string name="app_name_6">我的应用6</string>
    <string name="app_name_7">我的应用7</string>
</resources>