<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_diary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_list_background" >

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/diary_title"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#0f000000"
            android:hint="@string/title_hint"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_group"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/publish"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/publish" />

        <Button
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/save" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_group"
        android:layout_below="@+id/title"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="#0f000000"
        android:fillViewport="true"
        android:scrollbarStyle="outsideInset" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#00000000"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/diary_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:gravity="top"
                android:hint="@string/content_hint"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>